# Gemini_imageedit_caller

./: .gitignore  README.md  apply_alignment_to_existing.py  create_comparison_table.py  download_kaggle_samples.py  download_kaggle_zip.py  download_samples_simple.py  download_with_progress.py  extract_samples.py  face_alignment.py  face_alignment_unified.py  generate_all_results.py  image_edit_caller_prd.md  image_processor.py  image_processor_no_align.py  process_with_landmarks.py  prompt.md  pyproject.toml  regenerate_simple_table.py  regenerate_table.py  requirements.txt  results_table.md  sept5_refactor_plan.md  server.py  server_no_align.py  test_alignment_demo.py  test_alignment_final.py  test_alignment_simple.py  test_alignment_visual.py  test_kaggle_api.py  test_minimal.py  test_selfie_landmarks.py  test_server.py  test_single_image.py  test_single_pair_with_landmarks.py
.claude/: settings.local.json
alignment/: __init__.py  detectors.py  pipeline.py  transform.py
debug/: build_detector_composite.py  test_alignment_consistency.py
